<?xml version="1.0" encoding="utf-8"?>
<resources>
    
   <string name="app_name">LoginScreen</string>
   <string name="action_settings">Settings</string>
   <string name="hello_world">Know And Share</string>
   <string name="username">Username:</string>
   <string name="password">Password:</string>
   <string name="Login">Login</string>
   <string name="attempts">Attempts Left:</string>
   <string name="sign_up">Signup</string>
   
</resources>
